# django-hackernews

./: .pre-commit-config.yaml  README.md  pyproject.toml
hacknews/: manage.py
hacknews/core/: urls.py  views.py
hacknews/core/templates/core/: base.html  index.html  login.html  new.html  signup.html
hacknews/hacknews/: asgi.py  settings.py  urls.py  wsgi.py
hacknews/story/: forms.py  models.py  urls.py  views.py
hacknews/story/templates/story/: create.html  detail.html
