[tool.poetry]
name = "hackernews"
version = "0.1.0"
description = ""
authors = ["EXTRAS12"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.0.2"
ipython = "^8.12.0"
pre-commit = "^3.2.2"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
